--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,8 +2,8 @@
 <head>
     <title>Error</title>
 </head>
-<body>
+<body class="rplace-canvas">
     <h1>Error</h1>
-    <p th:if="${error}" style="color:red" th:text="${error}"></p>
+    <p th:if="${error}" class="error" th:text="${error}"></p>
 </body>
 </html>
